Fjerner /vedtak endepunktet fra OpenApi spesifikasjon. Representerer ikke dataene vi kan levere.
